fix(): scrollbar no longer shows

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -66,3 +66,7 @@
 .no-pointers{
   pointer-events: none;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
